added new files and fixed a mistake in the table tags

--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -77,14 +77,14 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 1.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Architecture des ordinateurs - Cours - Partie 1.pdf" href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 2.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Architecture des ordinateurs - Cours - Partie 2.pdf" href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 3.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Architecture des ordinateurs - Cours - Partie 3.pdf" href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 2, 3, 4.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 2, 3, 4.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Architecture des ordinateurs - Cours - Partie 2, 3, 4.pdf" href="../../../media/smi/s4/Architecture des ordinateurs/Architecture des ordinateurs - Cours - Partie 2, 3, 4.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
@@ -98,16 +98,16 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre 1.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Electromagnetism/Electromagnetism - Cours - Chapitre 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Electromagnetism - Cours - Chapitre 1.pdf" href="../../../media/smi/s4/Electromagnetism/Electromagnetism - Cours - Chapitre 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (Ecrit).pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Electromagnetism/Electromagnetism - Cours - Cours (Ecrit).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Electromagnetism - Cours - Cours (Ecrit).pdf" href="../../../media/smi/s4/Electromagnetism/Electromagnetism - Cours - Cours (Ecrit).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 1  .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 1  .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Electromagnetism - TDs - TD 1  .pdf" href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 1  .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
@@ -115,7 +115,7 @@
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 2  .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 2  .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Electromagnetism - TDs - TD 2  .pdf" href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 2  .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 2 - Partie 1 [Correction].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 2 - Partie 1 [Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Electromagnetism - TDs - TD 2 - Partie 1 [Correction].pdf" href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 2 - Partie 1 [Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 2 - Partie 2 [Correction].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 2 - Partie 2 [Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Electromagnetism - TDs - TD 2 - Partie 2 [Correction].pdf" href="../../../media/smi/s4/Electromagnetism/Electromagnetism - TDs - TD 2 - Partie 2 [Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
@@ -129,21 +129,29 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Programmation 2/Programmation 2 - Cours - Cours.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Programmation 2 - Cours - Cours.pdf" href="../../../media/smi/s4/Programmation 2/Programmation 2 - Cours - Cours.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 1.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Programmation 2/Programmation 2 - TDs - TD 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Programmation 2 - TDs - TD 1.pdf" href="../../../media/smi/s4/Programmation 2/Programmation 2 - TDs - TD 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 2.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Programmation 2/Programmation 2 - TDs - TD 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Programmation 2 - TDs - TD 2.pdf" href="../../../media/smi/s4/Programmation 2/Programmation 2 - TDs - TD 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 3.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Programmation 2/Programmation 2 - TDs - TD 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Programmation 2 - TDs - TD 3.pdf" href="../../../media/smi/s4/Programmation 2/Programmation 2 - TDs - TD 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
+                    </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Normale].pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s4/Programmation 2/Programmation 2 - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Programmation 2 - Exams - Exam (21_22) [Normale].pdf" href="../../../media/smi/s4/Programmation 2/Programmation 2 - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
@@ -157,19 +165,19 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Structures des données/Structures des données - Cours - Cours.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Structures des données - Cours - Cours.pdf" href="../../../media/smi/s4/Structures des données/Structures des données - Cours - Cours.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 1.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Structures des données/Structures des données - TDs - TD 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Structures des données - TDs - TD 1.pdf" href="../../../media/smi/s4/Structures des données/Structures des données - TDs - TD 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
@@ -183,11 +191,11 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s4/Système d'exploitation 2/Système d'exploitation 2 - Cours - Cours.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Système d'exploitation 2 - Cours - Cours.pdf" href="../../../media/smi/s4/Système d'exploitation 2/Système d'exploitation 2 - Cours - Cours.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
