--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -77,7 +77,7 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (21_22).pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (21_22).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - Cours - Cours (21_22).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (21_22).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
@@ -85,23 +85,23 @@
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (22_23) - Partie 2.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - Cours - Cours (22_23) - Partie 2.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (22_23) - Partie 3.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - Cours - Cours (22_23) - Partie 3.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (22_23) - Partie 4.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 4.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - Cours - Cours (22_23) - Partie 4.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 4.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD 1 (22_23).pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - TDs - TD 1 (22_23).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - TDs - TD 1 (22_23).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - TDs - TD 1 (22_23).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">TPs</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TPs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TP (22_23).pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - TPs - TP (22_23).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - TPs - TP (22_23).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - TPs - TP (22_23).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
@@ -115,13 +115,13 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 1.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - Cours - Partie 1.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 2.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - Cours - Partie 2.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 3.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - Cours - Partie 3.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
@@ -135,11 +135,11 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Cours - Cours .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Cours - Cours .pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Cours - Cours .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
@@ -153,13 +153,13 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</th>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD (20_21) - 1.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - TDs - TD (20_21) - 1.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD (20_21) - 2.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - TDs - TD (20_21) - 2.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD (20_21) - 3.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - TDs - TD (20_21) - 3.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                        </ul></th>
+                        </ul></td>
                     </tr>
                 </tbody>
             </table>
