added new files to smi/s1 and smi/s5

--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -123,6 +123,15 @@
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Partie 3.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - Cours - Partie 3.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) - 2 [Avec Correction].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 2 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - TDs - TD (22_23) - 2 [Avec Correction].pdf" href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 2 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) - 3 [Avec Correction].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 3 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - TDs - TD (22_23) - 3 [Avec Correction].pdf" href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 3 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -139,6 +148,14 @@
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Cours .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Cours - Cours .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Cours - Cours .pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Cours - Cours .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (19_20) [Normale] .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Exams - Exam (19_20) [Normale].pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -161,10 +178,19 @@
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD (20_21) - 3.pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - TDs - TD (20_21) - 3.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (19_20) [Normale].pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - Exams - Exam (19_20) [Normale].pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Normale].pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - Exams - Exam (21_22) [Normale].pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
-        
+
     </main>
 </body>
 </html>
