added new files to smi/s5

--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -103,10 +103,18 @@
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TP (22_23).pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - TPs - TP (22_23).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - TPs - TP (22_23).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - TPs - TP (22_23).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Normale].pd<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Bases de données/Bases de données - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Bases de données - Exams - Exam (21_22) [Normale].pd" href="../../../media/smi/s5/Bases de données/Bases de données - Exams - Exam (21_22) [Normale].pd" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
-        
+
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
@@ -125,7 +133,7 @@
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
-                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) - 2 [Avec Correction].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 2 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - TDs - TD (22_23) - 2 [Avec Correction].pdf" href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 2 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
@@ -156,6 +164,7 @@
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (19_20) [Normale] .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Exams - Exam (19_20) [Normale].pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [] .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (21_22) [].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Exams - Exam (21_22) [].pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (21_22) [].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
