added new files to smi/s3 and smi/s5

--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -140,6 +140,14 @@
                             <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) - 3 [Avec Correction].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 3 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - TDs - TD (22_23) - 3 [Avec Correction].pdf" href="../../../media/smi/s5/Réseau/Réseau - TDs - TD (22_23) - 3 [Avec Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-pre"><a href="../../../media/smi/s5/Réseau/Réseau - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Réseau - Exams - Exam (22_23) [Normale].pdf" href="../../../media/smi/s5/Réseau/Réseau - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
