added new exams to smi/s3, smi/5 and seg/s1

--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
         <div class="flex flex-wrap gap-2 justify-center">
 
             <figure class="relative max-w-200px aspect-square transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
-                <a href="./filieres/smi/"><img class="rounded-lg h-full w-full transition-all duration-300 brightness-50 hover:brightness-75" src="./static/img/smi.jpg" alt="image description"></a>
+                <a href="./filieres/smi"><img class="rounded-lg h-full w-full transition-all duration-300 brightness-50 hover:brightness-75" src="./static/img/smi.jpg"></a>
                 <figcaption class="absolute bottom-6 px-4 text-2xl font-semibold text-white"><p>SMI</p></figcaption>
+            </figure>
+
+            <figure class="relative max-w-200px aspect-square transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
+                <a href="./filieres/seg/"><img class="rounded-lg h-full w-full transition-all duration-300 brightness-50 hover:brightness-75" src="./static/img/seg.jpg"></a>
+                <figcaption class="absolute bottom-6 px-4 text-2xl font-semibold text-white"><p>SEG</p></figcaption>
             </figure>
 
         </div>
