--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -155,6 +155,26 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
+            <div id="analyse1" class="text-xl font-bold pb-4">Compilation :</div>
+            <table class="w-full border border-gray-300">
+                <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (18_19) [Normale] .pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Compilation/Compilation - Exams - Exam (18_19) [Normale] .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Compilation - Exams - Exam (18_19) [Normale] .pdf" href="../../../media/smi/s5/Compilation/Compilation - Exams - Exam (18_19) [Normale] .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (19_20) [Normale + Avec Correction] .pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Compilation/Compilation - Exams - Exam (19_20) [Normale + Avec Correction] .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Compilation - Exams - Exam (19_20) [Normale + Avec Correction] .pdf" href="../../../media/smi/s5/Compilation/Compilation - Exams - Exam (19_20) [Normale + Avec Correction] .pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Blanc].pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Compilation/Compilation - Exams - Exam (21_22) [Blanc].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Compilation - Exams - Exam (21_22) [Blanc].pdf" href="../../../media/smi/s5/Compilation/Compilation - Exams - Exam (21_22) [Blanc].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Module -->
+        <div class="module sm:rounded p-4 my-2 bg-white">
+            <!-- Module name -->
             <div id="analyse1" class="text-xl font-bold pb-4">UML :<small class="pl-2 font-semibold text-gray-500">Conception Orientée Objet</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
@@ -172,7 +192,7 @@
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (19_20) [Normale] .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Exams - Exam (19_20) [Normale].pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [] .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (21_22) [].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Exams - Exam (21_22) [].pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (21_22) [].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Rattrapage] .pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (21_22) [Rattrapage].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="UML - Exams - Exam (21_22) [Rattrapage].pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Exams - Exam (21_22) [Rattrapage].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -202,6 +222,7 @@
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (19_20) [Normale].pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - Exams - Exam (19_20) [Normale].pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (19_20) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Normale].pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - Exams - Exam (21_22) [Normale].pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="POO - Exams - Exam (22_23) [Normale].pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
